--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "jest",
-    "dev": "nodemon src/app.js",
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest",
+    "dev": "nodemon server.js",
     "lint": "biome check .",
     "format": "biome format . --write",
     "prisma-generate": "prisma generate",
@@ -22,14 +22,20 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@biomejs/biome": "1.9.4",
     "@types/node": "^22.13.10",
+    "babel-jest": "^29.7.0",
     "biome": "^0.3.3",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
