--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "biome format . --write"
   },
   "dependencies": {
+    "jotai": "^2.12.2",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
