--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "biome format . --write"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "jotai": "^2.12.2",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
